--- a/src/simple_object_control/config/costmap_common_params.yaml
+++ b/src/simple_object_control/config/costmap_common_params.yaml
@@ -3,4 +3,4 @@ raytrace_range: 10.0
 footprint: [[-0.1, -0.1], [-0.1, 0.1], [0.1, 0.1], [0.1, -0.1]]
 inflation_radius: 0.3
 observation_sources: laser_scan_sensor
-laser_scan_sensor: {sensor_frame: base_link, data_type: LaserScan, topic: /scan, marking: true, clearing: true}
+laser_scan_sensor: {sensor_frame: body, data_type: LaserScan, topic: /scan, marking: true, clearing: true}
